added clean up for form data
