# src/models/onboarding/profile.dto.ts
@@ -48,6 +48,11 @@ export class UpdateProfileDto {
   @ApiPropertyOptional()
   @IsOptional()
   @IsString()
+  imageUrl?: string;
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @IsString()
   email?: string;
 
   @ApiPropertyOptional()
